--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-30  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-search-pager.c: 
+	Move online url to perminant address at gnome.org
+
 2006-08-28  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-io-channel.c:
