--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,17 +1,22 @@
+2006-08-30  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2006-08-30  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
 
 2006-08-29  Rajesh Ranjan <rajeshkajha@yahoo.com>
 
-        * hi.po: Updated Hindi Translation.
+	* hi.po: Updated Hindi Translation.
 
 2006-08-24  Raivis Dejus  <orvils@gmail.com>
 
-        * lv.po: Updated Latvian translation.
+	* lv.po: Updated Latvian translation.
 
 2006-08-21 Khandakar Mujahidul Islam <suzan@bengalinux.org>
-	*bn.po: Updated Bengali translation.
+
+	* bn.po: Updated Bengali translation.
 
 2006-08-18  Gintautas Miliauskas  <gintas@akl.lt>
 
