Updated Catalan translation.

--- a/po/ca.po
+++ b/po/ca.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.9.90\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-08-30 18:27+0200\n"
-"PO-Revision-Date: 2006-08-26 12:43+0200\n"
+"POT-Creation-Date: 2006-08-31 15:02+0200\n"
+"PO-Revision-Date: 2006-08-31 15:04+0200\n"
 "Last-Translator: Gil Forcada <gilforcada@guifi.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
@@ -493,7 +493,7 @@ msgstr "_Torna al principi"
 
 #: ../data/yelp.schemas.in.h:1
 msgid "Font for fixed text"
-msgstr "Tipus de lletra per al text fixe"
+msgstr "Tipus de lletra per al text fix"
 
 #: ../data/yelp.schemas.in.h:2
 msgid "Font for text"
@@ -1001,7 +1001,7 @@ msgstr "Navegador d'ajuda"
 
 #: ../src/yelp-window.c:926 ../src/yelp-window.c:1082
 msgid "The Uniform Resource Identifier for the file is invalid."
-msgstr "L'indentificador uniforme del recurs per a aquest fitxer no és vàlid."
+msgstr "L'identificador uniforme del recurs per a aquest fitxer no és vàlid."
 
 #: ../src/yelp-window.c:938 ../src/yelp-window.c:1077
 #, c-format
