--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-31  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2006-08-31  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
         * zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
