Add missing entries into LINGUAS

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-01  Abel Cheung  <abelcheung@gmail.com>
+
+	* LINGUAS: Add missing entries
+
 2006-09-01  Jovan Naumovski  <jovan@lugola.net>
 
 	* mk.po: Updated Macedonian translation.
