--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-01  Nikos Charonitakis  <nikosx@gmail.com>
+
+	* el.po: Updated Greek translation
+
 2006-09-01  Runa Bhattacharjee <runabh@gmail.com>
 
 	* bn_IN.po: Fixed some typos.
