Updated Catalan translation.

--- a/po/ca.po
+++ b/po/ca.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.9.90\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-08-31 15:02+0200\n"
-"PO-Revision-Date: 2006-08-31 15:04+0200\n"
+"POT-Creation-Date: 2006-09-03 11:50+0200\n"
+"PO-Revision-Date: 2006-09-03 12:03+0200\n"
 "Last-Translator: Gil Forcada <gilforcada@guifi.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
@@ -357,7 +357,7 @@ msgstr "Documents diversos"
 
 #: ../data/toc.xml.in.h:21
 msgid "Office"
-msgstr "Oficina"
+msgstr "Ofimàtica"
 
 #: ../data/toc.xml.in.h:22
 msgid "Other Applications"
@@ -401,7 +401,7 @@ msgstr "Aplicacions d'utilitats"
 
 #: ../data/toc.xml.in.h:32
 msgid "Variety of other applications"
-msgstr "Varietat d'altres aplicacions"
+msgstr "Altres aplicacions diverses"
 
 #: ../data/toc.xml.in.h:33
 msgid "Welcome to the GNOME Help Browser"
@@ -691,22 +691,18 @@ msgstr "els fòrums de suport al GNOME"
 msgid ""
 "Your search could not be processed. The file ‘%s’ is either missing or is "
 "not a valid XSLT stylesheet."
-msgstr ""
-"No s'ha pogut processar la cerca. Falta el fitxer «%s», o no és un full "
-"d'estil XSLT vàlid."
+msgstr "No s'ha pogut processar la cerca. Manca el fitxer «%s», o no és un full d'estil XSLT vàlid."
 
 #: ../src/yelp-search-pager.c:807
 #, c-format
 msgid "No results for \"%s\""
-msgstr "No s'han obtingut resultats per «%s»"
+msgstr "No s'han obtingut resultats per a «%s»"
 
 #: ../src/yelp-search-pager.c:808
 msgid ""
 "Try using different words to describe the problem you're having or the topic "
 "you want help with."
-msgstr ""
-"Proveu fent servir paraules diferents per descriure el problema que teniu o "
-"el tema del que voleu ajuda."
+msgstr "Proveu fent servir paraules diferents per descriure el problema que tingueu o el tema del que vulgueu ajuda."
 
 #: ../src/yelp-search-pager.c:811
 #, c-format
