--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-03  Danilo Šegan  <danilo@gnome.org>
+
+	* sr.po, sr@Latn.po: Updated by Goran Rakić.
+
 2006-09-03  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
 
 	* ca.po: Updated Catalan translation.
