--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-03  Lucas Rocha  <lucasr@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation
+	by Leonardo Ferreira Fontenelle <leo.fontenelle@gmail.com>
+
 2006-09-03  Danilo Šegan  <danilo@gnome.org>
 
 	* sr.po, sr@Latn.po: Updated by Goran Rakić.
