Add Persian translation by Sanaz Shahrokni.
2006-09-04  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* fa.po: Add Persian translation by Sanaz Shahrokni.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-04  Roozbeh Pournader  <roozbeh@farsiweb.info>
+
+	* fa.po: Add Persian translation by Sanaz Shahrokni.
+
 2006-09-03  Lucas Rocha  <lucasr@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation
