--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-04  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated  Greek translation.
+
 2006-09-04  Roozbeh Pournader  <roozbeh@farsiweb.info>
 
 	* fa.po: Add Persian translation by Sanaz Shahrokni.
