--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+==================== 2.16.0 ====================
+2006-09-04  Brent Smith  <gnome@nextreality.net>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.16.0
+
 2006-09-03  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-toc-pager.c: (toc_add_doc_info): check if the document
