--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,58 @@
+Changed in 2.16.0:
+-------------------
+* Fix a crash when the category is missing for a document   (Brent Smith)
+* Fix a crash with bzip streams                             (Don Scorgie)
+* Move online url to perminant address at gnome.org         (Don Scorgie)
+* Suppress critical warnings when they aren't critical      (Don Scorgie) 
+* Other info file fixes                                     (Don Scorgie)
+* Fix crash when apropos goes nuts, fixes bug #347467       (Priit Laes)
+* Fix crash on CVS info file                                (Don Scorgie)
+* Updated Translations:
+(ar)
+Vladimir Petkov (bg)
+Runa Bhattacharjee (bn_IN)
+Khandakar Mujahidul Islam (bn)
+Gil Forcada (ca)
+Rhys Jones (cy)
+Hendrik Richter (de)
+Mindu Dorji (dz)
+Kostas Papadimas (el)
+David Lodge (en_GB)
+Francisco Javier F. Serrador (es)
+Iñaki Larrañaga Murgoitio (eu)
+Sanaz Shahrokni (fa)
+Ilkka Tuohela (fi)
+Alastair McKinstry (ga)
+Ankit Patel (gu)
+Rajesh Ranjan (hi)
+Gabor Kelemen (hu)
+Satoru SATOH (ja)
+Vladimer Sichinava (ka)
+Changwoo Ryu (ko)
+Erdal Ronahi (ku)
+Gintautas Miliauskas (lt)
+Raivis Dejus (lv)
+Jovan Naumovski (mk)
+Ani Peter (ml)
+Ketaki Akade, Ashwini Trimukhe (mr)
+Wouter Bolsterlee (nl)
+Subhransu Behera (or)
+A S Alam (pa)
+Leonardo Ferreira Fontenelle (pt_BR)
+Duarte Loreto (pt)
+Mugurel Tudor (ro)
+Leonid Kanter (ru)
+Ivan Noris (sk)
+Горан Ракић (sr)
+Daniel Nylander (sv)
+drtvasudevan (ta)
+Theppitak Karoonboonyanan (th)
+Maxim Dzumanenko (uk)
+Clytie Siddall (vi)
+Funda Wang (zh_CN)
+Woodman Tuen (zh_HK)
+Woodman Tuen (zh_TW)
+
 Changed in 2.15.91:
 -------------------
 * Fix search results to be accessible                       (Don Scorgie)
