--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-06  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2006-09-04  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
