Updated Slovenian translation.
2006-09-08  Matic Zgur  <mr.zgur@gmail.com>

	* sl.po: Updated Slovenian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-08  Matic Zgur  <mr.zgur@gmail.com>
+
+	* sl.po: Updated Slovenian translation.
+
 2006-09-06  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
