--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-09  Vladimer Sichinava  <vlsichinava@gmail.com>
+
+        * ka.po: Updated Georgian translation.
+
 2006-09-08  Matic Zgur  <mr.zgur@gmail.com>
 
 	* sl.po: Updated Slovenian translation.
