--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2006-09-10  David Lodge <dave@cirt.net>
+
+	* en_GB.po: Updated English (British) translation.
+
 2006-09-09  Vladimer Sichinava  <vlsichinava@gmail.com>
 
-        * ka.po: Updated Georgian translation.
+	* ka.po: Updated Georgian translation.
 
 2006-09-08  Matic Zgur  <mr.zgur@gmail.com>
 
