--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-09-12  Christian Persch  <chpe@cvs.gnome.org>
+
+	* m4/gecko.m4:
+
+	Prefer xulrunner over mozilla.
+
 ==================== 2.16.0 ====================
 2006-09-04  Brent Smith  <gnome@nextreality.net>
 
