Added 'mg'. Added Malagasy translation.
* po/LINGUAS: Added 'mg'.
* po/mg.po: Added Malagasy translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-14  Thierry Randrianiriana  <randrianiriana@gmail.com>
+
+	* LINGUAS: Added 'mg'.
+	* mg.po: Added Malagasy translation.
+
 2006-09-11  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
@@ -116,7 +121,7 @@
 2006-08-13  Rahul Bhalerao  <b.rahul.pm@gmail.com>
 
 	* mr.po: Updated Marathi Translation
-	
+
 2006-08-12  Satoru SATOH <ss@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
@@ -448,7 +453,7 @@
 
 	* zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
 	* zh_TW.po: Updated Traditional Chinese translation(Taiwan).
-	
+
 2006-05-06  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
@@ -545,7 +550,7 @@
 2006-03-13  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish Translation by Serkan Kenar
-	
+
 2006-03-13  Benoît Dejean  <benoit@placenet.org>
 
 	* fr.po: Updated French translation.
@@ -622,7 +627,7 @@
 
 	* zh_TW.po: Updated Traditional Chinese translation(Taiwan).
 	* zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
-	
+
 2006-02-24  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
@@ -711,7 +716,7 @@
 2006-01-31  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
-	
+
 2006-01-31  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>
 
 	* da.po: Updated Danish translation.
@@ -909,7 +914,7 @@
 2006-01-09  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
 
 	* ca.po: Updated Catalan translation.
-	
+
 2006-01-08  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
@@ -1146,7 +1151,7 @@
 
 2005-10-26  Simos Xenitellis  <simos@gnome.org>
 
-	* ky.po: Added Kyrgyz (Kirghiz) translation by 
+	* ky.po: Added Kyrgyz (Kirghiz) translation by
 	Timur Zhamakeev <ztimur@mail.ru>. This is the first Kirghiz
 	GNOME translation, welcome Timur!
 
@@ -1334,7 +1339,7 @@
 2005-06-17  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Updated German translation.
-	
+
 2005-06-11  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
@@ -1531,7 +1536,7 @@
 
 2005-02-13  Sebastien Bacher  <seb128@debian.org>
 
-	* fr.po: Updated French translation, 
+	* fr.po: Updated French translation,
 	from Baptiste Mille-Mathias <bmm80@free.fr>.
 
 2005-02-13  Vincent van Adrighem  <adrighem@gnome.org>
@@ -1605,7 +1610,7 @@
 2004-02-04  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Updated German translation.
-	
+
 2005-02-04  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
@@ -2099,13 +2104,13 @@
 
 	* bg.po: Updated Bulgarian translation by
 	Vladimir "Kaladan" Petkov <vpetkov@i-space.org>
-		
+
 2004-07-09  Gil Osher  <dolfin@rpg.org.il>
 
 	* he.po: Updated Hebrew translation.
 
 2004-07-04  Pawan Chitrakar  <pawan@nplinux.org>
-	
+
 	* ne.po: Nepali Updated Translation
 
 2004-06-28  Laurent Dhima  <laurenti@alblinux.net>
@@ -2161,17 +2166,17 @@
 
 	* is.po: Updated Icelandic translation by
 	Helgi Þormar Þorbjörnsson  <helgi@trance.is>
-	
+
 2004-04-03  Kenneth Rohde Christiansen  <kenneth@gnu.org>
 
 	* nds@NFE.po: Added draft translation into Low Saxon (Northern
-	Frisian Enclave). 
+	Frisian Enclave).
 
 2004-03-31  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian tranlsation by
 	Vladimir "Kaladan" Petkov <vpetkov@i-space.org>.
-	
+
 2004-03-31  Christian Rose  <menthos@menthos.com>
 
 	* af.po: Added Afrikaans translation by
@@ -2197,7 +2202,7 @@
 
 2004-03-21  Danilo Šegan  <dsegan@gmx.net>
 
-	* sr.po, sr@Latn.po: Serbian translation reviewed by 
+	* sr.po, sr@Latn.po: Serbian translation reviewed by
 	Slobodan Sredojević <ssl@uns.ns.ac.yu>.
 
 2004-03-20  Gareth Owen  <gowen72@yahoo.com>
@@ -2847,7 +2852,7 @@
 
 2003-12-03  Sanlig Badral  <badral@openmn.org>
 
-	* mn.po: Updated Mongolian translation. 
+	* mn.po: Updated Mongolian translation.
 
 2003-12-03  Danilo Šegan  <dsegan@gmx.net>
 
@@ -2977,7 +2982,7 @@
 2003-08-18  Danilo Šegan  <dsegan@gmx.net>
 
 	* be.po: Updated Belarusian translation by Ales Nyakhaychyk
-	<nab@mail.by>. 
+	<nab@mail.by>.
 
 2003-08-18  Metin Amiroff <metin@karegen.com>
 
@@ -3131,7 +3136,7 @@
 
 2003-05-26  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
 
-	* cy.po: Added Welsh translation from 
+	* cy.po: Added Welsh translation from
 	Chris M. Jackson  <chris@www.linux.org.uk>
 
 2003-05-20  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
@@ -3174,7 +3179,7 @@
 
 2003-05-06  Danilo ?©egan  <dsegan@gmx.net>
 
-	* sr.po, sr@Latn.po: Added Serbian translation by 
+	* sr.po, sr@Latn.po: Added Serbian translation by
 	http://Prevod.org/.
 
 2003-05-05  Paul Duffy <dubhthach@frink.nuigalway.ie>
@@ -3290,7 +3295,7 @@
 2003-02-03  Daniel Yacob  <locales@geez.org>
 
 	* am.po: Updated Amharic translation.
-	
+
 2003-02-02  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
@@ -3370,7 +3375,7 @@
 2003-01-09  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
-	
+
 2003-01-08  Kang Jeong-Hee  <Keizi@mail.co.kr>
 
 	* ko.po: Updated Korean translation by Young-Ho, Cha.
@@ -3384,7 +3389,7 @@
 	* hi.po: New hindi translation by
 	Bhopal team <anuragseetha@yahoo.com>
 	Guntupalli Karunakar <karunakar@freedomink.org>
-	
+
 2003-01-05  Kostas Papadimas <pkst@gmx.net>
 
 	* el.po: Updated Greek translation.
@@ -3408,7 +3413,7 @@
 2003-01-03  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokmal) translation.
-	
+
 2003-01-02  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* pl.po: Updated Polish translation by
@@ -3471,7 +3476,7 @@
 2002-12-11  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
-	
+
 2002-12-10  Daniel Yacob  <locales@geez.org>
 
 	* am.po: Updated Amharic translations.
@@ -3511,11 +3516,11 @@
 2002-11-25  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm????¥l) translation.
-	
+
 2002-11-25  Yanko Kaneti  <yaneti@declera.com>
 
 	* *.po: Convert all to UTF-8.
-	
+
 2002-11-05  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Added Albanian translation
@@ -3528,7 +3533,7 @@
 2002-10-29  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm????¯??????) translation.
-	
+
 2002-10-21  Andras Timar  <timar@gnome.hu>
 
 	* hu.po: s/ucirc/udblac/
@@ -3547,7 +3552,7 @@
 
 2002-08-27  Germ????¯?????? Poo Caamao <gpoo@ubiobio.cl>
 
-	* es.po: Updated Spanish translation from 
+	* es.po: Updated Spanish translation from
 	Juan Manuel Garc????¯?????? Molina <juanma_gm@wanadoo.es>
 
 2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
@@ -3615,7 +3620,7 @@
 2002-07-02  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm????¯??????) translation.
-	
+
 2002-06-30  Zbigniew Chyla  <chyla@gnome.pl>
 
 	* pl.po: Updated Polish translation by
@@ -3695,7 +3700,7 @@
 
 2002-06-02  Germ????¯?????? Poo Caamao <gpoo@ubiobio.cl>
 
-	* es.po: Updated Spanish translation from 
+	* es.po: Updated Spanish translation from
 	Juan Manuel Garc????¯?????? Molina <juanma_gm@wanadoo.es>
 
 2002-06-01  Carlos Perell Mar????¯?????? <carlos@gnome-db.org>
@@ -3752,7 +3757,7 @@
 2002-05-07  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm????¯??????) translation.
-	
+
 2002-05-07  Christophe Merlet  <christophe@merlet.net>
 
 	* fr.po: Updated French translation.
@@ -3812,7 +3817,7 @@
 2002-04-23  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm????¯??????) translation.
-	
+
 2002-04-22  Takeshi Aihana <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
@@ -3887,7 +3892,7 @@
 2002-04-11  Mikael Hallendal  <micke@codefactory.se>
 
 	* ja.po: added Japanese translation from Takeshi Aihana
-	<aihana@gnome.gr.jp> 
+	<aihana@gnome.gr.jp>
 
 2002-04-11  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
@@ -3987,7 +3992,7 @@
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm-A????$)B????¥l) translation.
-	
+
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
 	* POTFILES.in: Renamed the *.in files which seem to have been
@@ -4072,7 +4077,7 @@
 
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
-	* el.po: Added Greek translation. 
+	* el.po: Added Greek translation.
 
 2002-02-20  Hasbullah Bin Pit <sebol@ikhlas.com>
 
@@ -4102,11 +4107,11 @@
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm-A????$)B????¥l) translation.
-	
+
 2002-02-10  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm-A????$)B????¥l) translation.
-	
+
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
@@ -4136,7 +4141,7 @@
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm-A????$)B????¥l) translation.
-	
+
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* pl.po: Added Polish translation by
@@ -4162,7 +4167,7 @@
 2002-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm-A????$)B????¥l) translation.
-	
+
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Converted to UTF-8.
@@ -4199,7 +4204,7 @@
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm-A????$)B????¥l) translation.
-	
+
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
 	* POTFILES.in: Added missing file.
@@ -4246,7 +4251,7 @@
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokm-A????$)B????¥l) translation.
-	
+
 2001-12-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation.
@@ -4262,7 +4267,7 @@
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Added Norwegian (bokm-A????$)B????¥l) translation.
-	
+
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
 	* uk.po: utf-8 is spelled utf-8, not utf-8 :)
@@ -4314,9 +4319,8 @@
 2001-12-03  Yuriy Syrota  <rasta@renome.rovno.ua>
 
 	* uk.po: Added Ukrainian translation.
-	
+
 2001-12-01  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
 	* .cvsignore: Cleaned up a bit.
-
