--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-09-17  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/Yelper.cpp:
+	* src/Yelper.h:
+
+	Fix the build with gecko trunk.
+
 2006-09-12  Christian Persch  <chpe@cvs.gnome.org>
 
 	* m4/gecko.m4:
