updated Walloon file

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-22  Pablo Saratxaga  <pablo@mandriva.com>
+
+	* wa.po: updated Walloon file.
+
 2006-09-14  Thierry Randrianiriana  <randrianiriana@gmail.com>
 
 	* LINGUAS: Added 'mg'.
@@ -2121,7 +2125,7 @@
 
 	* sk.po: Updated Slovak translation by Ivan Noris.
 
-2004-05-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2004-05-24  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* tg.po: Added Tajik file
 
@@ -2129,7 +2133,7 @@
 
 	* nl.po: Translation updated.
 
-2004-04-27  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2004-04-27  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* eu.po: Added Basque file
 
@@ -2141,7 +2145,7 @@
 
 	* hu.po: Updated Hungarian translation.
 
-2004-04-24  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2004-04-24  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* ka.po: Added Georgian file
 
@@ -3030,7 +3034,7 @@
 
 	* az.po: Updated Azerbaijani translation.
 
-2003-07-11  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2003-07-11  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* wa.po: Updated Walloon file
 
@@ -3342,7 +3346,7 @@
 
 	* de.po: Updated German translation.
 
-2003-01-20  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2003-01-20  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* vi.po: Updated Vietnamese file
 
@@ -3350,7 +3354,7 @@
 
 	* et.po: Updated Estonian translation.
 
-2003-01-15  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2003-01-15  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* vi.po: Updated Vietnamese file
 
@@ -3419,7 +3423,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-12-29  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2002-12-29  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* wa.po: updated Walloon file
 
@@ -3568,11 +3572,11 @@
 	* fr.po: Updated French translation from contribution of
 	Sun G11n <gnome_int_l10n@ireland.sun.com>.
 
-2002-07-26  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2002-07-26  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* vi.po: Updated Vietnamese file
 
-2002-07-22  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2002-07-22  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* wa.po: updated Walloon file
 
@@ -3746,7 +3750,7 @@
 
 	* ca.po: Updated translation.
 
-2002-05-15  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2002-05-15  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* vi.po: Updated Vietnamese file
 
@@ -3784,7 +3788,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2002-05-05  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2002-05-05  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* vi.po: Updated Vietnamese file
 
@@ -3805,7 +3809,7 @@
 
 	* fr.po: Updated French translation.
 
-2002-04-28  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2002-04-28  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* vi.po: Added Vietnamese file
 	* wa.po: Updated Walloon file
@@ -3894,7 +3898,7 @@
 	* ja.po: added Japanese translation from Takeshi Aihana
 	<aihana@gnome.gr.jp>
 
-2002-04-11  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2002-04-11  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* wa.po: Updated Walloon file
 	* lv.po: Completed header
@@ -3984,7 +3988,7 @@
 
 	* sk.po: Updated Slovak translation.
 
-2002-03-04  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2002-03-04  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* wa.po: Updated Walloon file
 	* tr.po: Updated Turkish file
@@ -4280,7 +4284,7 @@
 
 	* POTFILES.in: updated
 
-2001-12-09  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2001-12-09  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* az.po: Added Azeri file
 
@@ -4312,7 +4316,7 @@
 2001-12-04  Malcolm Tredinnick <malcolm@commsecure.com.au>
 	* Replace yelp-book.c with yelp-section.c in POTFILES.in
 
-2001-12-03  Pablo Saratxaga  <pablo@mandrakesoft.com>
+2001-12-03  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* wa.po: Added Walloon file
 
