--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-27  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2006-09-22  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* wa.po: updated Walloon file.
