Make F7 toggle caret properly Set initial state of caret in prefs window
* src/yelp-settings.c:
* src/yelp-settings.h:
* src/yelp-window.c:
Make F7 toggle caret properly
Set initial state of caret in prefs window

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-09-29  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-settings.c: 
+	* src/yelp-settings.h:
+	* src/yelp-window.c:
+	Make F7 toggle caret properly
+	Set initial state of caret in prefs window
+
 2006-09-17  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/Yelper.cpp:
