--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Changed in 2.16.1:
+------------------
+* Set initial caret state properly in prefs                 (Don Scorgie)
+* Fix build with gecko trunk                                (Christian Persch)
+* Prefer xulrunner over mozilla                             (Chrisitan Persch)
+* Updated Translations:
+el: Kostas Papadimas
+en_GB: David Lodge
+gl: Ignacio Casal Quinteiro
+it: Luca Ferretti
+ka: Vladimer Sichinava
+mg: Thierry Randrianiriana
+sl: Matic Zgur
+wa: Pablo Saratxaga
+
 Changed in 2.16.0:
 -------------------
 * Fix a crash when the category is missing for a document   (Brent Smith)
