--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+==================== 2.16.1 ====================
+2006-10-02  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.16.1
+	
 2006-09-29  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-settings.c: 
