--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-07  Elijah Newren  <newren gmail com>
+
+	* src/yelp-print.c (yelp_print_present_status_dialog): Remove
+	markup from translatable messages.  #360450
+
 2006-10-05  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-utils.c: 
