--- a/po/es.po
+++ b/po/es.po
@@ -9,16 +9,16 @@
 # Copyright (C) 2001,2003, 2004, 2005, 2006 Free Software Foundation, Inc.
 msgid ""
 msgstr ""
-"Project-Id-Version: es\n"
+"Project-Id-Version: gnome-terminal-doc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-07-27 11:51+0200\n"
-"PO-Revision-Date: 2006-07-27 11:52+0200\n"
+"PO-Revision-Date: 2006-10-08 02:16+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.1\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: ../data/info.xml.in.h:1 ../src/yelp-toc-pager.c:1838
@@ -881,11 +881,11 @@ msgstr "Ventana _nueva"
 
 #: ../src/yelp-window.c:330
 msgid "Print This Document"
-msgstr "Imprime este documento"
+msgstr "Imprimir este documento"
 
 #: ../src/yelp-window.c:335
 msgid "Print This Page"
-msgstr "Imprime esta página"
+msgstr "Imprimir esta página"
 
 #: ../src/yelp-window.c:340
 msgid "About This Document"
