--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-08  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation, fix #359973.
+
 2006-10-08  Francisco Javier F. Serrador  <serrador@openshine.com>
 
 	* es.po: Updated Spanish translation.
