--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-17  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2006-10-08  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation, fix #359973.
